Closed
Bug 220576
Opened 22 years ago
Closed 22 years ago
.png image corruption on first load or Shift-Reload
Categories
(Core Graveyard :: GFX: Win32, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jaagup.irve, Assigned: tor)
References
()
Details
(Keywords: fixed1.4.2, platform-parity, testcase)
Attachments
(5 files)
|
528 bytes,
text/html
|
Details | |
|
633 bytes,
text/html
|
Details | |
|
633 bytes,
text/html
|
Details | |
|
20.88 KB,
image/png
|
Details | |
|
4.87 KB,
patch
|
pavlov
:
review+
blizzard
:
superreview+
chofmann
:
approval1.6+
|
Details | Diff | Splinter Review |
This seems to be a regression.
Using Mozilla 1.5 RC2 on Windows 98
Go to http://www.mozilla.org/
Scroll past the bugzilla screenshot with a small evil chip on it so that the
picture disappears under the top side of the window.
Scroll upwards, notice that only the bottom part of the picture will be redrawn.
I'd like Mozilla 1.5 final not to behave like this.
Comment 1•22 years ago
|
||
Any idea when the regression occurred? This seems to be a Windows-only problem,
by the way -- not a problem with a current Linux trunk build.
Keywords: pp
| Reporter | ||
Comment 2•22 years ago
|
||
It is a regrassion but an old one -- I checked back and it seems that it has
been around since at least 1.2 , 1.3 and 1.4 were also affected.
1.0.1 does not have it.
I try to upgrade my display drivers today whan I get some time and report back.
Comment 3•22 years ago
|
||
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6a) Gecko/20030930
You don´t need to scroll, simply right-click on a part of that image, and close
the kontext menu. The part hidden by the context menue stay white.
No, i just retried, but did see this behaviour before, as I started testing when
I read about this in a Mozillazine
forum.http://forums.mozillazine.org/viewtopic.php?p=211610#211610
First I had to scroll up, and back, and after that the image region was white.
I then right-clicked on the firebird image to the left, and the image returned.
When I now rightclick on a part of the bugzilla image, that part doesn´t repaint
the image, when the menue is closed.
Also switching between tabs restores the image.
I don´t think this is a driver issue, as I´m seeing it on two very different
systems:
Win98, 96MB, Celeron 333 with 8 MB SiS6326-grafics, that is scrap from 1999 or
older.
Win98SE, 512MB, XP1600, nForce integrated grafics (nVidia).
I also noticed a bug yesterday, but that is a XUL-bug
Bug 220717 -moz-image-region isn't inherited properly
Comment 4•22 years ago
|
||
Just tested it on Mozilla 1.0.2.
I could reproduce following steps:
cut part of the image by opening a context menue with rightclick,
the part of the image hidden by the contextmenue didn´t get repainted when I
closed the context menue.
Could repeat this step, as long as there was someting to cut.
Reloading restored the image.
Comment 5•22 years ago
|
||
From comment 2 and comment 4 regression must have been between 1.0.1 (working)
and 1.0.2 (showing bug), tested on Win98/Win98SE
Just retested with Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6a) Gecko/20030930
cut part of the image by opening a context menue with rightclick, while the page
still was loading, but the image was loaded. I closed the menue, while the page
still was loading, and the image was restored.
Afterwards, same as tested with others:
open a kontext menue with rightclick near or on the image.
the part of the image hidden by the contextmenue didn´t get repainted when I
closed the context menue.
Could repeat this step, as long as there was someting to cut.
Reloading restored the image.
Comment 6•22 years ago
|
||
did download and test some zip-version releases on Win98SE:
working: Mozilla 1.1 20020826
failing: Mozilla 1.2a 20020910
working: Mozilla 1.0.1 2002082606
failing: Mozilla 1.0.2 2002121606
Comment 7•22 years ago
|
||
I did not see this bug in "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US;
rv:1.5) Gecko/20030925" it seems to work fine.
I did notice the bug in Windows 98 running on VMWare "Mozilla/5.0 (Windows; U;
Win98; en-US; rv:1.4a) Gecko/20030401"
Seems fine in Windows XP.
| Reporter | ||
Comment 8•22 years ago
|
||
So far all reports have come from Windows 98 machines, then.
Comment 9•22 years ago
|
||
minimal testcase, no scrolling needed.
I minimized mozilla to about 1/3 screensize, and positioned it in the center of
the screen. I had irfanview in my taskbar, about same size as mozilla,
positioned to the left of it, when it was restored from tray.
Load testcase, displays fine.
restore irfanview, so that it overlaps part of the image, and send it back to
tray. The overlapped part of the image is gone.
This is reproducable, if the overlapping program comes up to the left of
mozilla, and overlaps part of the image.
This seems not to happen, is coming up to the right of mozilla, overlapping.
This also is not working, when I replace the bugzilla link/image with the
firebird link/image. I´ll attach two more testcases with the links in a table,
one working, the other not.
Comment 10•22 years ago
|
||
testcase in a table shows bug, as described above
Comment 11•22 years ago
|
||
same as before, not showing the bug
Comment 12•22 years ago
|
||
As I supposed to see a table bug, I started reducing the complexity, and then
sometime exchanged the bugzilla and the firebird link including image, the bug
stayed with bugzilla. Could it be that the png is crappy?
I also noticed, if you drag another program over the bugzilla image, it depends
of the direction of the drag, wether the image gets destroyed, or not.
Also when reducing the mozilla size so I had to scroll horizontally also, there
was a difference in the working depending on the direction of the scroll.
Seen on two different computers, different graficcards, Win98 & Win98SE.
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6a) Gecko/20031001
Keywords: testcase
Comment 13•22 years ago
|
||
Important! To reproduce the bug, the program popping up must overlap left part
of the image only, there must be some part of the image visible to the right.
If the right border of the image is overlapped, it is restored.
See attached screenshot for positioning of the overlap.
Comment 14•22 years ago
|
||
Using the testcases with Mozilla only, no external program needed!
Open testcases in tabs, i.e. attachment 132519 [details] bugzilla, buggy and attachment
132520 [details] Firebird, not buggy
Open Bookmarksmanager, and resize that it fits into the testcases images.
Drag BM over the images, and you will see.
Is this bug Win98 specific?
Comment 15•22 years ago
|
||
wfm Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031202
bug still seen on 1.4.1, also 1.5 and 1.6a
Comment 16•22 years ago
|
||
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031120
BuildID 2003112008 shows the bug, BuildID2003112308 doesn´t show the bug.
Maybe a dupe of Bug 150881 scaled transparent png badly rendered
checked in:
11/23/2003 07:23 by tor%cs.brown.edu
Bug 150881 - rendering artifacts painting scaled alpha composited
images on gtk+ and win32
Comment 17•22 years ago
|
||
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031217
Bug still seen on Win98/WinXP/Win2k Mozilla & Firebird
New bug description because of redesign of Mozilla homepage
changed Summary, was: Image disappears when scrolling upwards
changed URL, was: http://www.mozilla.org/
reports from bugday:
image corruption seen by Asa on Firebird/WinXP, by another user on Win2k, by me
on Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.6b) Gecko/20031217
Steps to reproduce:
1. Load http://bugzilla.mozilla.org/attachment.cgi?id=132518&action=view
2. If it is not corrupt, do a Shift-Reload or clear cache and reload
3a. click on the corrupt image: it shown complete, and then the link is loaded.
This will be seen best on a slow computer usoing a slow connection.
3b. change from tab with corrupt image to another tab, and then back.
Image will be displayed well.
4a. open PageInfo (Ctrl+I) and resize it, that it gets smaller than the image
4b. position it right into the middle of the image
4c. do a Shift-Reload to get a corrupt image
4d. click on the PageInfo Icon in the Windows Taskbar: Page Info flies up to the
image, and hides some of its area.
4e. click again on PageInfo Icon in the Windows Taskbar: Page Info goes back
down to the taskbar, the image area left shows the uncorrupted image.
5a. do a Shift-Reload to get a corrupt image
5b. move the tiny PageInfo panel over the image, the areas touched are shown
correctly.
I´m seeing progress in this bug in step 5b:
When I filed the bug, wiping across the image painted as well as erased the
image, now it paints only.
Summary: Image disappears when scrolling upwards → .png image corruption on first load or Shift-Reload
CCing tor since it sounds like an image bug
Comment 19•22 years ago
|
||
I just retested the builds I mentioned in comment #16
BuildID 2003112008 loads ok, Shift-Reloads ok
Open View Menu, and close, and the overlapped part of the image is gone.
It can be restored with File, Edit, or Bookmarks menu, as these menus are long
enough to overlap the lower border of the image.
Moving a minimized window like PageInfo reduced to the absolute minimum with the
mouse over the image erases parts of the image, and redraws some.
checked in:
11/23/2003 07:23 by tor%cs.brown.edu
Bug 150881 - rendering artifacts painting scaled alpha composited
images on gtk+ and win32
BuildID 2003112308 loads out of cache ok, corrupt on Shift-Reload.
Using a corrupt image:
Open View Menu, and close, and the overlapped part of the image is drawn.
Same for the other menus, File, Edit, or Bookmarks menu.
Moving a minimized window like PageInfo reduced to the absolute minimum with the
mouse over the corrupt image redraws the overlapped parts.
Assignee: roc → tor
Component: Layout: View Rendering → GFX: Win32
Flags: blocking1.6+
Comment 20•22 years ago
|
||
This bug can be reproduced also with Windows Me (which is no great surprise as
it comes from the Win9x family).
| Assignee | ||
Comment 21•22 years ago
|
||
Attachment #137679 -
Flags: superreview?(blizzard)
Attachment #137679 -
Flags: review?(pavlov)
Updated•22 years ago
|
Attachment #137679 -
Flags: review?(pavlov) → review+
Comment 22•22 years ago
|
||
Comment on attachment 137679 [details] [diff] [review]
handle partial image updates
nit: the lack of braces around the multi-line block bugs me but I can let it
go.
sr=blizzard
Attachment #137679 -
Flags: superreview?(blizzard) → superreview+
| Assignee | ||
Comment 23•22 years ago
|
||
Comment on attachment 137679 [details] [diff] [review]
handle partial image updates
Fairly serious PNG regression that would nice to fix for 1.6
Attachment #137679 -
Flags: approval1.6?
| Assignee | ||
Comment 24•22 years ago
|
||
Checked in on trunk.
| Assignee | ||
Comment 25•22 years ago
|
||
*** Bug 215606 has been marked as a duplicate of this bug. ***
Comment 26•22 years ago
|
||
Comment on attachment 137679 [details] [diff] [review]
handle partial image updates
a=chofmann for 1.6
Attachment #137679 -
Flags: approval1.6? → approval1.6+
| Assignee | ||
Comment 27•22 years ago
|
||
Checked in on MOZILLA_1_6_BRANCH.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 28•22 years ago
|
||
Checked in on 1.4 branch - verbal approval from mkaply.
Keywords: fixed1.4.2
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•