Bug 220576 - 8-bit alpha PNG corruption on first load or shift-reload r=pavlov, sr=blizzard